# LabelQ

./: .gitignore  CMakeLists.txt  LICENSE  README.md  labelq.qrc  main.cpp
RMFF/: README.md
include/: ClickableQLabel.h  Definitions.h  MainWindow.h  PageListEditArea.h  QuickInput.h  TranslationEditArea.h  WorkArea.h  ZoomScrollArea.h  entrywindow.h  mainwindow.h
include/controller/: Controller.h  PageOperator.h  ProjectOperator.h
include/lib/: DialogProvider.h  IconLoader.h  Translator.h
include/model/: Label.h  Model.h  Page.h  PageOperator.h  Project.h
include/model/builtin/: InMemoryPage.h  RealPage.h  RealProject.h  TutorialProject.h
languages/: en_US.lst  naked.lst  zh_CN.lst
resource/icon/: README.md
src/: ClickableQLabel.cpp  MainWindow.cpp  PageListEditArea.cpp  QuickInput.cpp  TranslationEditArea.cpp  WorkArea.cpp  ZoomScrollArea.cpp  entrywindow.cpp  mainwindow.cpp
src/controller/: PageOperator.cpp  ProjectOperator.cpp
src/lib/: DialogProvider.cpp  IconLoader.cpp  Translator.cpp
src/model/: Label.cpp  Page.cpp  PageOperator.cpp  Project.cpp
src/model/builtin/: InMemoryPage.cpp  RealPage.cpp  RealProject.cpp  TutorialProject.cpp
ts_builder_src/: ts_builder.cpp
ui/: MainWindow.ui  entrywindow.ui  mainwindow.ui
